--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.1",
     "multer": "^1.4.5-lts.1",
